# nix-python-project-workflow

./: .gitignore  flake.nix  pyproject.toml
django_project/: manage.py
django_project/django_project/: settings.py
