[tool.poetry]
name = "nix-python-project-workflow"
version = "0.1.0"
description = ""
authors = ["maddonix <tlux14@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core" ] #, "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
