[tool.poetry]
name = "nix-python-project-workflow"
version = "0.1.0"
description = ""
authors = ["maddonix <tlux14@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Pandas is an example package which breaks with
# error: attribute 'format' missing
# fails to build with format=pyproject and setuptools >= 65
# so we need to specify it with an override in our flake definition of poetry2nix
# Further information: https://github.com/nix-community/poetry2nix/blob/master/docs/edgecases.md
# pandas = "^1.3.3"
numpy = "^1.26.3"
setuptools = "^69.0.3"
wheel = "^0.42.0"
# opencv-python = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
